Add VSWR calculation, add config file and add some very basic tests

--- a/amplifiers_controller/templates/index.html
+++ b/amplifiers_controller/templates/index.html
@@ -44,7 +44,7 @@
                             <mark class="vswr"></mark>
                         </div>
                         <div>Temperature:
-                            <mark class="temperature">0</mark>&#8451;
+                            <mark class="temperature"></mark>&#8451;
                         </div>
                         <div>Requested Output:
                             <mark class="requested_output"></mark>dB
